<resources>
    <string name="app_name">Java Programming</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Learn Java</string>
    <string name="nav_header_subtitle">Browse courses, take exams</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="status_icon">Status icon</string>
    <string name="loading_error">An error has occurred while loading %1$s!</string>
    <string name="tap_to_see_details">Tap to see details</string>
    <string name="in_development">In development</string>
    <string name="course_development_info">This course is in development! More chapters will be released in the future.</string>
    <string name="swipe_horizontally">Swipe horizontally</string>
    <string name="drop_down_all">Drop down all</string>
    <string name="loading_ad">Loading ad…</string>
    <string name="ad_load_fail">Ad failed to load!</string>
    <string name="notifications">Notifications</string>
    <string name="exam_notifications">Enable exam notifications</string>
    <string name="difficulty">Difficulty</string>
    <string name="difficulty_easy">Easy: 50% required to pass</string>
    <string name="difficulty_default">Default: 60% required to pass</string>
    <string name="difficulty_challenging">Challenging: 80% required to pass, limited time</string>
    <string name="reset">Reset progress</string>
    <string name="reset_details">Reset chapter, task and exam progression</string>
    <string name="reset_warning">This can\'t be undone. Are you sure?</string>
    <string name="reset_successful">The application was reset</string>
    <string name="themes">Themes</string>
    <string name="orange_theme">Orange</string>
    <string name="dark_theme">Dark</string>
    <string name="screen">Screen</string>
    <string name="keep_awake_description">Prevent screen from turning off</string>
    <string name="auto_open_unlocked_content_description">Automatically slide open unlocked content</string>
    <string name="guide_not_read">You haven\'t read the Guide yet! Do you want to read it now?</string>
    <string name="clip_sync">ClipSync</string>
    <string name="clip_sync_intro">Share your phone\'s clipboard with your computer\'s to easily transfer code samples between the two!</string>
    <string name="get_started">Get started</string>
    <string name="get_started_info_1">The app has built in support for ClipSync! Download the pairing app for your computer from my GitHub:</string>
    <string name="download_link" translatable="false">https://gtomika.github.io/learn-java-clipsync</string>
    <string name="get_started_info_2">Start the downloaded app where you\'ll see a mode selection screen.</string>
    <string name="clip_sync_modes">ClipSync modes</string>
    <string name="bluetooth" translatable="false">Bluetooth</string>
    <string name="network">Network</string>
    <string name="clip_sync_modes_info_1">You can use Bluetooth. Use this method if both your phone and computer has Bluetooth.</string>
    <string name="clip_sync_modes_info_2">Alternatively, the app can sync through the local network. Use this is your devices are on the same network (for example on the same WiFi).</string>
    <string name="clip_sync_remember_description">The app will remember your decision! You only need to select a mode again if you want to change it.</string>
    <string name="clip_sync_mode_not_selected">Tap on one of the icons to select a mode!</string>
    <string name="clip_sync_bluetooth_selected">BLUETOOTH selected! Make sure the desktop app is also on and you selected bluetooth there too.</string>
    <string name="clip_sync_network_selected">NETWORK selected! Make sure the desktop app is also on and you selected network there too.</string>
    <string name="bluetooth_not_supported">This device does not support Bluetooth! You can try to use the other ClipSync method.</string>
    <string name="using_bluetooth_clip_sync">Using Bluetooth ClipSync!</string>
    <string name="using_network_clip_sync">Using network ClipSync!</string>
    <string name="clip_sync_disable">Disable</string>
    <string name="clip_sync_disabled">ClipSync disabled!</string>
    <string name="clip_sync_test">Test syncing</string>
    <string name="clip_sync_test_description">You can test if the syncing works using this dummy code sample:</string>
    <string name="dummy_code_sample" translatable="false">
        <![CDATA[
     <font color="#E65100">public static</font> <font color="#DF7401">void</font> <font color="#ADD8E6">main</font>(<font color="#999900">String</font>[] args) {
<br/>	&nbsp;&nbsp;&nbsp;&nbsp;<font color="#999900">System</font>.<font color="#ADD8E6">out</font>.<font color="#ADD8E6">println</font>(<font color="#2E8B57">&quot;ClipSync!&quot;</font>);
<br/>}
        ]]>
    </string>
    <string name="clip_sync_bluetooth_try_again">Bluetooth is on! Please try again now.</string>
    <string name="clip_sync_success">Synced with other device!</string>
    <string name="clip_sync_fail_time_out">ClipSync failed: time out.</string>
    <string name="clip_sync_fail">ClipSync failed!</string>
    <string name="clip_sync_bluetooth_cancelled">Must be turned on…</string>
    <string name="clip_sync_pairing">Pairing</string>
    <string name="clip_sync_pairing_info">Searching for nearby devices…</string>
    <string name="clip_sync_pairing_description">Bluetooth must find the ClipSync desktop app, which may take some time. This only needs to be performed once.</string>
    <string name="clip_sync_pairing_handshake">Desktop app found! Pairing…</string>
    <string name="clip_sync_not_paired">No paired app found. Please pair in the ClipSync menu!</string>
    <string name="clip_sync_misc_error">Could not locate desktop app! Make sure it\'s on, you selected Bluetooth mode, and that it\'s showing a green tick!</string>
    <string name="clip_sync_location">Bluetooth usage requires some permissions. Please allow them in the next dialog!</string>
    <string name="clip_sync_location_denied">Bluetooth needs permission!</string>
    <string name="scanning_device">Scanning device </string>
    <string name="clip_sync_open_on_computer">You should open this link on your computer! Do you want to open it here anyways?</string>
    <string name="notification_channel_name" translatable="false">LearnJava notification channel</string>
    <string name="notification_channel_description" translatable="false">…</string>
    <string name="notification_exam_ready">Exam ready</string>
    <string name="notification_exam_name_message">\'%1$s\' exam can now be started again!</string>
    <string name="courses">Courses</string>
    <string name="tasks">Tasks</string>
    <string name="exams">Exams</string>
    <string name="guide">Guide</string>
    <string name="starter_screen">Starter screen</string>
    <string name="open_drawer_for_exam_prompt">Unlock the next course by passing an exam!</string>
    <string name="before_you_start">Read the guide before you start:</string>
    <string name="start_learning">Start learning</string>
    <string name="continue_where_you_left_off">Continue where you left off</string>
    <string name="take_exam">Take exam</string>
    <string name="exam_countdown_prompt">Exam available in</string>
    <string name="exam_locked">Exam locked</string>
    <string name="exam_unfinished">Exam in development</string>
    <string name="exam_development_info">This exam is currently in development! It can\'t be used for now.</string>
    <string name="hour_suffix">h</string>
    <string name="minute_suffix">m</string>
    <string name="second_suffix">s</string>
    <string name="exam">Exam</string>
    <string name="time_remaining">Time remaining:</string>
    <string name="finish_exam">Finish exam</string>
    <string name="close_exam">Close exam</string>
    <string name="confirm_finish_exam">Are you sure you want to finish the exam?</string>
    <string name="exam_time_expired">The exam time has expired!</string>
    <string name="unfortunate">Unfortunate</string>
    <string name="confirm_abandon_exam">Are you sure you want to abandon this exam?</string>
    <string name="exam_passed">Exam passed!</string>
    <string name="exam_failed">Exam failed!</string>
    <string name="points">points</string>
    <string name="ongoing_exam">Ongoing exam</string>
    <string name="ongoing_exam_detail">Don\'t forget to finish the exam!</string>
    <string name="top_score">Top score:</string>
    <string name="no_answer_given">No answer given…</string>
    <string name="confirm_exam_start">Are you sure you want to start this exam?</string>
    <string name="question_icon">Question status icon</string>
    <string name="unanswered_question">There is 1 unanswered question!</string>
    <string name="unanswered_questions">There are %1$s unanswered questions!</string>
    <string name="multi_choice">multiple choices possible</string>
    <string name="text_question_hint">Enter your answer here</string>
    <string name="text_question_solution">A possible solution:</string>
    <string name="true_answer">TRUE</string>
    <string name="false_answer">FALSE</string>
    <string name="task">Task:</string>
    <string name="must_unlock_course_before_task">
        You must unlock this course before you can start these tasks.
    </string>
    <string name="mark_task_as_completed">Mark this task as completed</string>
    <string name="show_solution">Show solution</string>
    <string name="hide_solution">Hide solution</string>
    <string name="code">CODE</string>
    <string name="copy_content">Copy content</string>
    <string name="copy_successful">Code copied to clipboard</string>
    <string name="copy_failed">Failed to copy code</string>
    <string name="advanced">ADVANCED:</string>
    <string name="close_chapter">Close chapter</string>
    <string name="image_component_desc">Image component</string>
    <string name="zoom_in">Zoom in</string>
    <string name="zoom_out">Zoom out</string>
    <string name="interactive_code">INTERACTIVE CODE</string>
    <string name="interactive_check_solution">Check solution</string>
    <string name="interactive_help">Help</string>
    <string name="interactive_reset">Reset interactive code</string>
    <string name="empty_space_marker" translatable="false">___</string>
    <string name="formatted_line_break" translatable="false"><![CDATA[<br/>]]></string>
    <string name="interactive_correct">Correct!</string>
    <string name="interactive_incorrect">Something is not right yet…</string>
    <string name="code_component_fail">Error detected in the code sample!</string>
    <string name="congratulations">Congratulations!</string>
    <string name="congratulations_info_1">You\'ve passed all exams! Make sure to also do the tasks of each course.</string>
    <string name="congratulations_info_2">Additional courses will be added in the future. Next planned courses:</string>
    <string name="do_not_show_again">Don\'t show this again.</string>
    <string name="next_planned_course">Swing GUI course.</string>
    <string name="contact_me">Contact me</string>
    <string name="playground_create_file_description">Enter the file name!</string>
    <string name="playground_create_file_incorrect">Please use conventional Java class names (Capital first letter, only letters).</string>
    <string name="playground_create_file_hint">file name</string>
    <string name="java_file_extension" translatable="false">.java</string>
    <string name="playground_countdown">Please wait a bit before sending code to run again.</string>
</resources>