<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/congratulations"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <include
        layout="@layout/view_separator_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_height" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/medium_text_size"
        android:text="@string/congratulations_info_1"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/medium_text_size"
        android:text="@string/congratulations_info_2" />

    <TextView
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="@string/next_planned_course" />

    <include
        layout="@layout/view_separator_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_height" />

    <CheckBox
        android:id="@+id/congratulationsCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/do_not_show_again"/>

    <Button
        android:id="@+id/congratulationsOkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/ok"
        android:minWidth="100dp"
        android:layout_margin="@dimen/margin"/>
</LinearLayout>