<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Normal layout: if exam is unlocked and not on cool down -->
   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerInParent="true"
       android:gravity="center">

       <Button
           android:id="@+id/takeExamButton"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/take_exam"
           android:layout_margin="@dimen/margin"
           android:visibility="gone"
           tools:visibility="visible"/>

       <ImageView
           android:id="@+id/examStatusIcon"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:contentDescription="@string/status_icon"
           tools:srcCompat="@drawable/tick_icon"
           android:layout_margin="@dimen/margin"/>
   </LinearLayout>

    <!-- Countdown timer layout: exam unlocked but on cool down -->
    <LinearLayout
        android:id="@+id/countdownLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/margin"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exam_countdown_prompt"
            android:layout_marginEnd="@dimen/margin"/>

        <cn.iwgang.countdownview.CountdownView
            android:id="@+id/countdownView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:isShowDay="false"
            app:isShowHour="true"
            app:isShowMinute="true"
            app:isShowSecond="true"
            app:isShowMillisecond="false"
            app:timeTextColor="@android:color/black"
            app:timeTextSize="@dimen/big_text_size"
            app:isTimeTextBold="true"
            app:suffixGravity="bottom"
            app:suffixTextColor="@android:color/black"
            app:suffixTextSize="@dimen/small_text_size"
            app:suffixHour="@string/hour_suffix"
            app:suffixMinute="@string/minute_suffix"
            app:suffixSecond="@string/second_suffix" />
    </LinearLayout>

    <!-- Exam locked layout -->
    <LinearLayout
        android:id="@+id/lockedLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/margin"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exam_locked"
            android:layout_marginEnd="@dimen/margin"/>

        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:contentDescription="@string/status_icon"
            app:srcCompat="@drawable/locked_icon"/>
    </LinearLayout>
</RelativeLayout>