<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal">

   <TextView
       android:id="@+id/playgroundCountdownTextView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/playground_countdown"
       android:textSize="@dimen/medium_text_size"
       android:textStyle="bold"
       android:layout_margin="@dimen/margin"/>

    <cn.iwgang.countdownview.CountdownView
        android:id="@+id/playgroundCountdownView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:isShowDay="false"
        app:isShowHour="false"
        app:isShowMinute="true"
        app:suffixMinute="@string/minute_suffix"
        app:isShowSecond="true"
        app:suffixSecond="@string/second_suffix"
        app:isShowMillisecond="false"
        app:timeTextSize="@dimen/big_text_size"
        app:suffixTextSize="@dimen/big_text_size"
        app:timeTextColor="?attr/learnJavaTextColor"
        app:suffixTextColor="?attr/learnJavaTextColor"
        app:isTimeTextBold="true"
        android:layout_margin="@dimen/margin"
        android:padding="@dimen/padding"/>

    <Button
        android:id="@+id/playgroundCountdownOkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_margin="@dimen/margin"/>

</LinearLayout>