<?xml version="1.0" encoding="utf-8"?>
<!-- Same as normal exam selector but has a text view above, showing the exam name -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <TextView
           android:id="@+id/examNameView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="start"
           tools:text="Exam name (same as course name)"
           android:layout_alignParentStart="true"
           android:layout_toStartOf="@id/examStatusIcon"/>

       <ImageView
           android:id="@+id/examStatusIcon"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           tools:srcCompat="@drawable/unlocked_icon"
           android:contentDescription="@string/status_icon"
           android:layout_margin="@dimen/margin"
           android:layout_centerVertical="true"
           android:layout_alignParentEnd="true"/>


   </RelativeLayout>

    <RelativeLayout
        android:id="@+id/examView"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Normal layout: if exam is unlocked and not on cool down -->
        <Button
            android:id="@+id/takeExamButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_exam"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/margin"
            android:visibility="gone"
            tools:visibility="visible"/>

        <!-- Countdown timer layout: exam unlocked but on cool down -->
        <LinearLayout
            android:id="@+id/countdownLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/margin"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exam_countdown_prompt"
                android:layout_marginEnd="@dimen/margin"/>

            <cn.iwgang.countdownview.CountdownView
                android:id="@+id/countdownView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:isShowDay="false"
                app:isShowHour="true"
                app:isShowMinute="true"
                app:isShowSecond="true"
                app:isShowMillisecond="false"
                app:timeTextColor="@android:color/black"
                app:timeTextSize="@dimen/big_text_size"
                app:isTimeTextBold="true"
                app:suffixGravity="bottom"
                app:suffixTextColor="@android:color/black"
                app:suffixTextSize="@dimen/small_text_size"
                app:suffixHour="@string/hour_suffix"
                app:suffixMinute="@string/minute_suffix"
                app:suffixSecond="@string/second_suffix" />
        </LinearLayout>

        <!-- Exam locked layout -->
        <LinearLayout
            android:id="@+id/lockedLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/margin"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exam_locked"
                android:layout_marginEnd="@dimen/margin"/>

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:contentDescription="@string/status_icon"
                app:srcCompat="@drawable/locked_icon"/>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>