<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/question_background"
    android:layout_margin="@dimen/small_margin"
    android:elevation="@dimen/elevation">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/questionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Question text here"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/questionIcon"
            android:textSize="@dimen/medium_text_size"/>

        <ImageView
            android:id="@+id/questionIcon"
            android:contentDescription="@string/question_icon"
            android:layout_margin="@dimen/margin"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:srcCompat="@drawable/tick_icon"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/trueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_answer"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/unselected_background"
            android:layout_weight="1"
            android:textAlignment="center"
            android:elevation="@dimen/elevation"/>

        <TextView
            android:textAlignment="center"
            android:id="@+id/falseTextView"
            android:layout_margin="@dimen/margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_answer"
            android:background="@drawable/unselected_background"
            android:layout_weight="1"
            android:elevation="@dimen/elevation"/>

    </LinearLayout>

</LinearLayout>